--- a/app/views/followings/index.html.erb
+++ b/app/views/followings/index.html.erb
@@ -10,21 +10,41 @@
             <div class="geinin-card-image">
               <img src="">
             </div>
-            <%= link_to geinin.name, "geinins/#{geinin.id}", :class=>"geinin-name" %>
-            <%= render :partial => "geinins/geinin_sns", locals: { geinin: geinin } %>
+            <div class="geinin-card-name"> 
+              <%= link_to geinin.name, "geinins/#{geinin.id}", :class=>"geinin-card-name" %>
+            </div>
+            <div class="geinin-card-sns">
+              <%= render :partial => "geinins/geinin_sns", locals: { geinin: geinin } %>
+            </div>
             <div class="following-box" id="following-button-<%= geinin.id %>">
               <%= render :partial => "followings/following", locals: { geinin: geinin} %>	
             </div>
-            <div class="post-option">
-              <%= link_to edit_geinin_path(geinin.id) do %>
-                <i class="fas fa-edit"></i>
-                <span class="post-option-text">編集する</span>
-              <% end %>
-            </div>
           </div>
-          <div class="geinin-card-options">
-            <span class="as fa-birthday-cake"></span><%= geinin.start_year %>年結成
+          <div class="geinin-card-descriptions">
+            <span class="fas fa-birthday-cake icon"></span><%= geinin.start_year %>年結成<br>
             <span class="fas fa-map-marker-alt icon"></span><%= geinin.agency %>
+          </div>
+        </div>
+        <div class="geinin-card-options">
+          <div class="geinin-card-option">
+            <%= link_to edit_geinin_path(geinin.id) do %>
+              <i class="fas fa-edit"></i>
+              <span class="geinin-card-option-text">編集する</span>
+            <% end %>
+          </div>
+          <div class="geinin-card-option">
+            <%= link_to edit_geinin_path(geinin.id) do %>
+              <i class="fas fa-share-alt"></i>
+              <span class="geinin-card-option-text">
+              シェアする</span>
+            <% end %>
+          </div>
+          <div class="geinin-card-option">
+            <%= link_to edit_geinin_path(geinin.id) do %>
+              <i class="fas fa-users"></i>
+              <span class="geinin-card-option-text">
+              <%= Following.where(geinin_id: geinin.id).count %> フォロワー</span>
+            <% end %>
           </div>
         </div>
       </div>
