--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -956,7 +956,7 @@ input[name="tab_item"] {
 }
 /*タブ切り替えの中身のスタイル*/
 .tab_content {
-  display: none;ｈ
+  display: none;
   padding: 40px 40px 0;
   clear: both;
   overflow: hidden;
