--- a/app/views/followings/_following.html.erb
+++ b/app/views/followings/_following.html.erb
@@ -11,7 +11,7 @@
 	<% end %>
 <% else %>
 	<!--ログインしていない場合、「ログインするとフォロー機能が使えます」のメッセージを出す-->
-	<a id="modal-open" class="button-link">
-		<i class="fa fa-heart-o" aria-hidden="true"></i> フォローする
+	<a href="" id="modal-open" class="btn pink-blank following">
+		<span>フォローする</span>
 	</a>
 <% end %>
