--- a/app/views/lp.html.erb
+++ b/app/views/lp.html.erb
@@ -1,15 +1,17 @@
 <div class="message">
   <div class="message-inner">
     <p class="message-text">おもしろい！を見つけよう</p>
-    <p class="message-text-sub">あなたの好きな<br>お笑いライブを探せるSNS</p>
-    <p class="message-text-count">
-    登録ライブ数：<span class="accent number-large"><%= Event.all.count %></span> 件<br>
-    登録芸人数：<span class="accent number-large"><%= Geinin.all.count %></span> 組</p>
+    <div class="message-text-descriptions">
+      <p class="message-text-sub">あなたの好きなお笑いライブを探せるSNS</p>
+      <p class="message-text-count">
+      <span class="message-event-count">登録ライブ数：<span class="number-large"><%= Event.all.count %></span> 件</span>
+      <span class="message-geinin-count">登録芸人数：<span class="number-large"><%= Geinin.all.count %></span> 組</span></p>
+    </div>
     <%= link_to user_twitter_omniauth_authorize_path, :class =>"btn twitter-fill radius new-login" do %>
-        <i class="fa fa-twitter"></i> さっそく使い始める!
+        <i class="fab fa-twitter"></i> さっそく使い始める!
     <% end %>
-    <div class="no-login">
-      <%= link_to 'ログインせずに使う', events_path,:class=>"no-login" %>
+    <div class="new-login-description">
+      Twitterの認証ページに移動します
     </div>
   </div>
 </div>
@@ -48,7 +50,7 @@
             <div class="lp-panel-item-body">
             <h2 class="lp-panel-item-site-title">wArally!</h2>
             <p class="lp-panel-item-text" style="text-align:center">ログインするとwArally!のすべての機能をご利用いただけます！</p>
-            <%= link_to user_twitter_omniauth_authorize_path, :class =>"twitter-button" do %>
+            <%= link_to user_twitter_omniauth_authorize_path, :class =>"btn twitter-fill radius new-login" do %>
                 <i class="fa fa-twitter"></i> さっそく使い始める!
             <% end %>
             </div>
