--- a/app/views/events/_event_info.html.erb
+++ b/app/views/events/_event_info.html.erb
@@ -19,12 +19,7 @@
     </div>
     <div class="post-wrapper">
       <div class="post-title">
-        <h3 class="post-title">
-          <%= link_to event.title, event_path(event.id) %>
-        </h3>
-      </div>
-      <div class="post-place">
-        <span class="fas fa-map-marker-alt icon"></span><%= event.place %>
+        <h3><%= link_to event.title, event_path(event.id) %></h3>
       </div>
       <div class="post-performer">
         <ul>
@@ -32,6 +27,9 @@
 					    <li><%= link_to performer.performer, search_path(performer: performer.performer),:class =>"post-performer float-left" %></li>
 					  <% end %>
         </ul>
+      </div>
+      <div class="post-place">
+        <span class="fas fa-map-marker-alt icon"></span><%= event.place %>
       </div>
       <div class="post-content">
         <%= simple_format(event.description) %>
@@ -45,7 +43,7 @@
         </a>
       </div>
       <div class="post-image">
-        <%= attachment_image_tag event, :image, :fill, 280,280, format: 'jpeg' %>
+        <%= attachment_image_tag event, :image, :fill, 280,280, format: 'jpeg', :class =>"post-image" %>
       </div>
     </div>
     <div class="post-options">
