--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -2,8 +2,7 @@
   <div class="search-form-inner">
     <div class="search-categories">
       <div class="search-label">
-        <span><h2><span class="fas fa-search icon"></span>日付で探す</h2></span>
-        <p class="label-border"></p>
+        <h2 class="search-label-name"><span class="fas fa-search icon"></span>日付で探す</h2>
       </div>
       <div class="search-button-box">
         <span><%= link_to '今日', search_path(:date => 'today'), :class => "btn categories pink" %></span>
@@ -20,30 +19,28 @@
     <div class="search-categories">
       <div class="search-label">
         <h2 class="search-label-name"><span class="fas fa-search icon"></span>キーワードで探す</h2>
-        <p class="label-border"></p>
       </div>
       <div class="search-form-area">
         <%= form_tag(search_path, method: "get") do %>
-          <%= text_field_tag :keyword,"",class: "search-form",:placeholder => "キーワード(例:東京03、新宿、単独ライブ)" %>
+          <%= text_field_tag :keyword,"",class: "search-form",:placeholder => "キーワード(例:東京03、新宿、大喜利)" %>
         <% end %>
       </div>
-      <div class="search-performer-box post-performer">
-        <span class="fas fa-chart-line icon"></span><label for="label1">人気検索ワード</label>
-        <input type="checkbox" id="label1" class="cssacc" />
-        <div class="accshow">
+      <div class="popular-search-words-box post-performer">
+        <div class="popular-search-words-title">
+          <span class="fas fa-chart-line icon"></span>人気検索ワード
+        </div>
           <ul>
-            <li><%= link_to 'きつね', search_path(:performer => 'きつね'), :class => "post-performer float-left" %></li>
-            <li><%= link_to 'まんじゅう大帝国', search_path(:performer => 'まんじゅう大帝国'), :class => "post-performer float-left"  %></li>
-            <li><%= link_to '卯月', search_path(:performer => '卯月'), :class => "post-performer float-left"  %></li>
-            <li><%= link_to 'ランジャタイ', search_path(:performer => 'ランジャタイ'), :class => "post-performer float-left"  %></li>
-            <li><%= link_to 'トンツカタン', search_path(:performer => 'トンツカタン'), :class => "post-performer float-left" %></li>
-            <li><%= link_to '金属バット', search_path(:performer => '金属バット'), :class => "post-performer float-left"  %></li>
-            <li><%= link_to 'Aマッソ', search_path(:performer => 'Aマッソ'), :class => "post-performer float-left"  %></li>
-            <li><%= link_to '三四郎', search_path(:performer => '三四郎'), :class => "post-performer float-left"  %></li>
-            <li><%= link_to 'ゾフィー', search_path(:performer => 'ゾフィー'), :class => "post-performer float-left"  %></li>
-            <li><%= link_to 'うしろシティ', search_path(:performer => 'うしろシティ'), :class => "post-performer float-left"  %></li>                     
-          </ul>
-        </div>      
+            <li><%= link_to 'きつね', search_path(:performer => 'きつね'), :class => "post-performer" %></li>
+            <li><%= link_to 'まんじゅう大帝国', search_path(:performer => 'まんじゅう大帝国'), :class => "post-performer"  %></li>
+            <li><%= link_to '卯月', search_path(:performer => '卯月'), :class => "post-performer"  %></li>
+            <li><%= link_to 'ランジャタイ', search_path(:performer => 'ランジャタイ'), :class => "post-performer"  %></li>
+            <li><%= link_to 'トンツカタン', search_path(:performer => 'トンツカタン'), :class => "post-performer" %></li>
+            <li><%= link_to '金属バット', search_path(:performer => '金属バット'), :class => "post-performer"  %></li>
+            <li><%= link_to 'Aマッソ', search_path(:performer => 'Aマッソ'), :class => "post-performer"  %></li>
+            <li><%= link_to '三四郎', search_path(:performer => '三四郎'), :class => "post-performer"  %></li>
+            <li><%= link_to 'ゾフィー', search_path(:performer => 'ゾフィー'), :class => "post-performer"  %></li>
+            <li><%= link_to 'うしろシティ', search_path(:performer => 'うしろシティ'), :class => "post-performer"  %></li>                     
+          </ul>    
       </div>
     </div>
     <div class="search-categories">
@@ -53,21 +50,18 @@
       </div>  
       <div class="search-button-box">
         <span>
-            <%= link_to search_path(:category => '単独ライブ'), :class => "btn categories pink float-left" do %>
+            <%= link_to search_path(:category => '単独ライブ'), :class => "btn categories pink" do %>
               <span>単独ライブ</span>
-              <%= Event.default.where(event_categories: { category: '単独ライブ'} ).count %>
             <% end %>
         </span>
         <span>
-            <%= link_to search_path(:category => '無料'), :class => "btn categories pink float-left" do %>
+            <%= link_to search_path(:category => '無料'), :class => "btn categories pink" do %>
               <span>無料</span>
-              <%= Event.default.where(event_categories: { category: '無料'} ).count %>
             <% end %>
         </span>
         <span>
-          <%= link_to search_path(:category => 'エントリー制'), :class => "btn categories pink float-left" do %>
+          <%= link_to search_path(:category => 'エントリー制'), :class => "btn categories pink" do %>
               <span>エントリー制</span>
-              <%= Event.default.where(event_categories: { category: 'エントリー制'} ).count %>
             <% end %>
         </span>
       </div>
