--- a/app/views/events/search.html.erb
+++ b/app/views/events/search.html.erb
@@ -1,2 +1,23 @@
-<br><br><br><br>
-<%= render :partial => "events/search_results", locals: { results: @results } %>
+<% @events = @results[0] %>
+<% @datetime = @results[1] %>
+<% @keyword = @results[2] %>
+
+<section class="main">
+	<div class="page-info hard-shadows">
+		<% if @datetime.present? %>
+			<span class="accent"><%= @datetime.strftime("%Y年%m月%d日(%a)") %></span>のお笑いライブ一覧
+		<% else %>
+			<span class="accent"><%= @keyword %></span>の検索結果
+		<% end %>
+	</div>
+  <%= render :partial => "events/event_list", locals: { events: @events, user: @user  } %>
+ 
+  <% if @datetime.present? %>
+    <div class="navigation-block">
+      <% if @datetime.future? %>
+        <%= link_to "« "+@datetime.prev_day.strftime("%m月%d日"), search_path(:date => 'prev_day', :datetime => @datetime),:class => "btn navigation-link pink"  %>
+      <% end %>
+        <%= link_to @datetime.next_day.strftime("%m月%d日")+" »", search_path(:date => 'next_day', :datetime => @datetime),:class => "btn navigation-link pink" %>
+    </div>
+  <% end %>
+</section>
