--- a/app/views/events/_reserve.html.erb
+++ b/app/views/events/_reserve.html.erb
@@ -33,7 +33,7 @@
 <% if event.event_links.present? %>
  	<% event.event_links.each do |link| %>
 		<%= link_to link.url do %>
-		<i class="fas fa-ticket-alt"></i>
+		<i class="fas fa-link"></i>
 		<span class="post-option-text">予約する</span>   
 		<% end %>
 	<% end %>
