--- a/app/views/geinins/_geinin_edit.html.erb
+++ b/app/views/geinins/_geinin_edit.html.erb
@@ -46,7 +46,7 @@
     </div>
     <div class="form">
       <%= f.fields_for :geinin_tags do |tags_form| %>
-        <%= tags_form.text_area :tag,:placeholder => "タグ",:class => "event-edit-form form-long"  %>
+        <%= tags_form.text_area :tag,:placeholder => "タグ (例:芸風(漫才、コント)、賞レース戦績、代表的な出演番組など)",:class => "event-edit-form form-long"  %>
       <% end %>
     </div>
   </div>
