--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -201,6 +201,9 @@ header{
 }
 
 /* posts */
+.posts{
+  overflow:hidden;
+}
 .post{
   float:left;
   background-color:#fff;
@@ -262,7 +265,6 @@ header{
 }
 .post-performer{
   line-height: 1.5;
-  text-align:center;
   margin:0 auto;
   overflow:hidden;
 }
@@ -332,6 +334,7 @@ header{
     display:block;
     margin-top:10px;
     margin-bottom:10px;
+    overflow:hidden;
 }
 .post-options,.geinin-card-options{
     line-height: 20px;
@@ -497,9 +500,6 @@ footer{
     margin:0 auto;
     display:inline-block;
 }
-.new-button{
-    margin:10px;
-}
 .navigation-link{
     display: inline-block;
     vertical-align: top;
@@ -525,7 +525,7 @@ footer{
 .login-s{
   display:none;
 }
-
+/* event registration form */
 .event-edit-form{
     border:0;
     padding:10px;
@@ -542,52 +542,72 @@ footer{
     background-color:#ffffff;
 }
 .form-long{
-    width:300px;
+    width:72vw;
+    margin:0 5px 0 5px;
+    max-width:320px;
 }
 .event-edit-form:focus {
     border:solid 1px #f22e58;
 }
 .form-short{
-    width:127px;
-    display:inline-block;
-}
-.block{
+    width:29vw;
     display:block;
+    float:left;
+    max-width:140px;
+    margin-left:5px;
+}
+.form-short-2{
+    float:right;
+    width:29vw;
+    display:block;
+    max-width:140px;
+}
+.presale-period{
+    width:5vw;
+    text-align:center;
+    display:block;
+    float:left;
+    max-width:20px;
+    padding:10px 5px 5px 5px;
 }
 textarea{
     height:100px;
     margin-bottom:0;
     display:block;
 }
-.event-box{
-    width:375px;
-    margin:0 auto;
-    margin-top:20px;
-    margin-bottom:20px;
-}
 .form-item{
     clear:both;
     overflow:hidden;
+    width:100%;
 }
 .form-icon{
-    width:20px;
-    padding:10px 5px 5px 0;
+    width:5%;
+    padding:10px 0px 5px 5px;
     float:left;
 }
 .form{
     float:left;
+    overflow:hidden;
 }
 .more-info{
-    position: relative;
-    padding: 10px 16px;
-    font-size: 16px;/*フォントサイズ*/
-    color: #Fff;/*フォントカラー*/
-    background: #66CDAA;/*リボンの色*/
+    margin: 0 auto;
+    padding: 18px 0 17px 0;
+    font-size: 15px;
+    text-align: center;
+    margin-top:15px;
+    margin-bottom:15px;
+    line-height: 1.4;
+    color:#f7f7f7;
+    background: #66CDAA;
+    /* padding: 10px 0px;
+    text-align:center;
+    font-size: 16px;
+    color: #Fff;
     left:0;
-    margin:20px 10px 5px 25px;
-    width:290px;
+    margin:20px 0 5px 20px;
+    width:72vw;
+    max-width:420px; */
 }
-
 .more-info:before {
     position: absolute;
     content: '';
@@ -918,7 +938,7 @@ a.following:hover span.hover-shown{ display:inline; }
 }
 /*タブのスタイル*/
 .tab_item {
-  width: calc(100%/4);
+  width: calc(100%/3);
   height: 40px;
   border-bottom: 1px solid #ccd6dd;
   background-color: #fff;
@@ -932,16 +952,16 @@ a.following:hover span.hover-shown{ display:inline; }
   font-weight: bold;
   transition: all 0.2s ease;
 }
-.tab_item:hover {
+.tab_item:hover,.profile-nav-item:hover {
   opacity: 0.75;
   color:#f22e58;
 }
 /*ラジオボタンを全て消す*/
-input[name="tab_item"] {
+input[name="tab_item"],input[name="profile-nav-item"] {
   display: none;
 }
 /*タブ切り替えの中身のスタイル*/
-.tab_content {
+.tab_content,.profile-nav-content {
   display: none;
   padding: 40px 40px 0;
   clear: both;
@@ -951,11 +971,13 @@ input[name="tab_item"] {
 #following-tab:checked ~ #following_content,
 #participates-tab:checked ~ #participates_content,
 #pendings-tab:checked ~ #pendings_content,
-#my-posts-tab:checked ~ #my-posts_content{
+#my-posts-tab:checked ~ #my-posts_content,
+#following-geinin-tab:checked ~ #following-geinin-tab-content,
+#posted-event-tab:checked ~ #posted-event-tab-content{
   display: block;
 }
 /*選択されているタブのスタイルを変える*/
-.tabs input:checked + .tab_item {
+.tabs input:checked + .tab_item,.profile-nav-items input:checked + .profile-nav-item  {
   color:#f22e58;
   background-color: #fff;
   border-bottom: 3px solid #f22e58;
@@ -1048,9 +1070,14 @@ input[name="tab_item"] {
     overflow:hidden;
 }
 .profile-nav-item{
-    display:inline-block;
+    display:block;
+    float:left;
     width:32%;
     text-align:center;
+    transition: all 0.2s ease;
+}
+.profile-nav-item a:hover{
+  color:#f22e58;
 }
 .profile-nav-label{
     color: #657786;
@@ -1061,13 +1088,13 @@ input[name="tab_item"] {
     display:block;
 }
 .profile-value{
-    color: #66757f;
+    color: #657786;
     font-size: 18px;
     font-weight: bold;
     padding-top: 3px;
 }
-.profile-value a:hover{
-    color:#f22e58;
+.profile-value:hover{
+  color:#f22e58;
 }
 .geinin-title{
     font-size:18px;
@@ -1269,10 +1296,17 @@ input[name="tab_item"] {
     .profile-nav-label{
         display:block;
     }
-}
-@media(min-width:972px){
-    .posts{
-        width:972px;
+    .form-long{
+        width:220px;
+    }
+    .form-short{
+        width:76px;
+    }
+    .more-info{
+        width:280px;
+        margin:0 auto;
+        margin-top:10px;
+        margin-bottom:10px;
     }
 }
 .clearfix:after{
