--- a/app/views/events/_event_edit.html.erb
+++ b/app/views/events/_event_edit.html.erb
@@ -40,8 +40,10 @@
         <textarea placeholder="出演者（改行でタグになります）" class="event-edit-form textarea form-long" name="event[event_performers_attributes][0][performer]" id="event_event_performers_attributes_0_performer"><%= event_performers %></textarea>    
       </div>
     </div>
-    <%= f.submit '投稿する！', :class => "btn new pink" %>
-    <div class="more-info">もっと詳しく
+    <div class="more-info">
+      <div class="">
+        もっと詳しく
+      </div>
     </div>
     <div class="form-item">
       <div class="form-icon">
@@ -99,8 +101,8 @@
       </div>
       <div class="form">
         <%= f.text_field :presale_start,:placeholder => "先行販売開始日時",:class => "event-edit-form form-short" %>
-        〜
-        <%= f.text_field :presale_end,:placeholder => "終了日時",:class => "event-edit-form form-short" %>
+        <span class="presale-period">〜</span>
+        <%= f.text_field :presale_end,:placeholder => "終了日時",:class => "event-edit-form form-short-2" %>
       </div>
     </div>
     <%= f.submit '投稿する！', :class => "btn new pink create-post" %>
