--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,47 +2,50 @@
   <div class="page-info hard-shadows">
     <p>Myページ</p>
   </div>
-  <div class="post hard-shadows">
-    <div class="post-wrapper">
-      <div class="profile-header">
-        <div class="profile-image-box">
-         <img src="<%= @user.image_url %>" class="profile-image">
-        </div>
-        <div class="profile-name">
-          <span class="user-name"><%= @user.name %></span>
-          <span class="user-nickname">@<%= @user.nickname %></span>
-        </div>
-        <div class="following-box">
-          <% if @user.id == current_user.id %>
-            <p><%= link_to "プロフィール編集", edit_user_path(@user), class: "btn following pink" %></p>
-          <% end %>
-        </div>
-      </div>
-      <div class="post-content typography">
-        <p><span class="fas fa-file-alt icon"></span><%= @user.description %></p>
-        <p><span class="fas fa-link icon"></span><%= link_to @user.url, @user.url %></p>
-      </div>
-      <div class="profile-nav">
-        <ul class="profile-nav-list">
-          <li class="profile-nav-item">
-            <%= link_to following_path,:class=>"" do %>
-              <span class="profile-nav-label">ライブ登録数</span>
-              <span class="profile-value"><%= EventChangeHistory.where(user_id: current_user.id).select(:event_id).uniq.count %></span>
+  <div class="posts">
+    <div class="post hard-shadows">
+      <div class="post-wrapper">
+        <div class="profile-header">
+          <div class="profile-image-box">
+          <img src="<%= @user.image_url %>" class="profile-image">
+          </div>
+          <div class="profile-name">
+            <span class="user-name"><%= @user.name %></span>
+            <span class="user-nickname">@<%= @user.nickname %></span>
+          </div>
+          <div class="following-box">
+            <% if @user.id == current_user.id %>
+              <p><%= link_to "プロフィール編集", edit_user_path(@user), class: "btn following pink" %></p>
             <% end %>
-          </li>
-          <li class="profile-nav-item">
-            <%= link_to following_path,:class=>"" do %>
-              <span class="profile-nav-label">フォロー</span>
-              <span class="profile-value"><%= Following.where(user_id: current_user.id).count %></span>
-            <% end %>
-          </li>
-          <li class="profile-nav-item">
-            <%= link_to following_path,:class=>"" do %>
-              <span class="profile-nav-label">ログアウト</span>
-              <span class="profile-value fa fa-sign-out-alt"></span>
-            <% end %>
-          </li>
-        </ul>
+          </div>
+        </div>
+        <div class="post-content typography">
+          <p><span class="fas fa-file-alt icon"></span><%= @user.description %></p>
+          <p><span class="fas fa-link icon"></span><%= link_to @user.url, @user.url %></p>
+        </div>
+
+        <div class="profile-nav">
+          <ul class="profile-nav-list">
+            <li class="profile-nav-item">
+              <%= link_to following_path,:class=>"" do %>
+                <span class="profile-nav-label">ライブ登録数</span>
+                <span class="profile-value"><%= EventChangeHistory.where(user_id: current_user.id).select(:event_id).uniq.count %></span>
+              <% end %>
+            </li>
+            <li class="profile-nav-item">
+              <%= link_to following_path,:class=>"" do %>
+                <span class="profile-nav-label">フォロー</span>
+                <span class="profile-value"><%= Following.where(user_id: current_user.id).count %></span>
+              <% end %>
+            </li>
+            <li class="profile-nav-item">
+              <%= link_to following_path,:class=>"" do %>
+                <span class="profile-nav-label">ログアウト</span>
+                <span class="profile-value fa fa-sign-out-alt"></span>
+              <% end %>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
